src/objects/System_Design_Item__c.object
<CustomObject>
    <fields>
        <fullName>PTC_Rating_kW__c</fullName>
        <formula>(System_Design_Product__r.PTC_Rating_W__c *  Quantity__c) / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTC Rating (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Annual_Solar_Access__c</fullName>
        <formula>Install_Location__r.Annual_Solar_Access__c</formula>
        <label>Panel Annual Solar Access</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Panel_Azimuth__c</fullName>
        <formula>Azimuth__c +  Install_Location__r.Azimuth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel Azimuth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Pitch__c</fullName>
        <description>Calculated pitch of the panels as mounted</description>
        <formula>Install_Location__r.Pitch__c  +  Tilt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel Pitch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Output_kWh_y__c</fullName>
        <description>This Field is Auto-Calculated on Update</description>
        <inlineHelpText>This Field is Auto-Calculated on Update</inlineHelpText>
        <label>Projected Annual Output (kWh/y)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>System_Design_Array__r.System_Design__r.Property__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rated_Output_W__c</fullName>
        <description>Rated Output (W)</description>
        <formula>System_Design_Product__r.Rated_Output_W__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rated Output (W)</inlineHelpText>
        <label>Rated Output (W)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rated_Output_kW__c</fullName>
        <description>This Field is Auto-Calculated on Update</description>
        <inlineHelpText>This Field is Auto-Calculated on Update</inlineHelpText>
        <label>Rated Output (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_Solar_Access__c</fullName>
        <formula>Install_Location__r.Sep_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sep Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shading_Text__c</fullName>
        <label>Shading Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shading__c</fullName>
        <label>Shading</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snow_De_Rate_kWh_y_kW__c</fullName>
        <formula>System_Design_Array__r.System_Design__r.Property__r.Snow_De_Rate_kWh_y_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snow De-Rate (kWh/y/kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snow_Derate_Text__c</fullName>
        <label>Snow Derate Text</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suneye_TSRF_Multiplier__c</fullName>
        <formula>(Suneye_TSRF__c -  TSRF_Adjustment__c ) *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suneye TSRF Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suneye_TSRF__c</fullName>
        <formula>Install_Location__r.Annual_Solar_Access__c *  Install_Location__r.Suneye_Tilt_and_Orientation_Factor_TOF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suneye TSRF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sunnova_Projected_Annual_Output_kWhy__c</fullName>
        <formula>Sunnova_Site_Quality__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sunnova Projected Annual Output (kWh/y)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunnova_Site_Quality__c</fullName>
        <label>Sunnova Site Quality</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunnova_Upgrade_Factor__c</fullName>
        <defaultValue>1.11</defaultValue>
        <label>Sunnova Upgrade Factor</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Design_Array__c</fullName>
        <label>System Design Array</label>
        <referenceTo>System_Design_Array__c</referenceTo>
        <relationshipLabel>System Design Items</relationshipLabel>
        <relationshipName>System_Design_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Design Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5) OR (6 AND 7) OR (8 AND 9) OR 10</booleanFilter>
            <filterItems>
                <field>System_Design_Product__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Panel</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Panel</value>
            </filterItems>
            <filterItems>
                <field>System_Design_Product__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Inverter</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Inverter</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Mounting</value>
            </filterItems>
            <filterItems>
                <field>System_Design_Product__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Electrical</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Electrical</value>
            </filterItems>
            <filterItems>
                <field>System_Design_Product__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Trenching</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Trenching</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Special Part</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>System Design Items</relationshipLabel>
        <relationshipName>System_Design_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Design__c</fullName>
        <description>System Design Id</description>
        <formula>System_Design_Array__r.System_Design__r.Id</formula>
        <inlineHelpText>System Design Id</inlineHelpText>
        <label>System Design</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSRF_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount by which TSRF is improved (+) or degraded (-) as a result of the tilt.  
This value cannot adjusted unless there is a tilt.</description>
        <inlineHelpText>The amount by which TSRF is improved (+) or degraded (-) as a result of the tilt.  
This value cannot adjusted unless there is a tilt.</inlineHelpText>
        <label>TSRF Adjustment For Panel Tilt</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tilt_Text__c</fullName>
        <label>Tilt Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tilt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Angular offset imparted by a tilted mounting system.  Flush mounts would be 0 degrees.
Positive tilts move the panel closer to vertical.  Negative tilts move the panels closer to horizontal.
Note: this is NOT the effective &quot;pitch&quot; of the panel once mounted.  That value is the sum of the Location&apos;s &quot;pitch&quot; and the Item&apos;s &quot;tilt&quot;.</description>
        <inlineHelpText>Angular offset imparted by a tilted mounting system.  Flush mounts would be 0 degrees.
Positive tilts move the panel closer to vertical.  Negative tilts move the panels closer to horizontal.</inlineHelpText>
        <label>Tilt of Panel (Degrees)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_TSRF__c</fullName>
        <formula>Effective_TSRF__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for calculating Weighted Overall TSRF as System Design</inlineHelpText>
        <label>Total TSRF</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trenching_Length_ft__c</fullName>
        <formula>Install_Location__r.Physical_Surface__r.Trenching_Dist_to_Intercon_Pt_ft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Trenching Length (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trenching_Lengthft__c</fullName>
        <label>Total Trenching Length (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Panel_Azimuth_Sum__c</fullName>
        <formula>if(RecordType.Name = &apos;Panel&apos;, Panel_Azimuth__c * Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Panel Azimuth Sum</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Panel_Tilt_Sum__c</fullName>
        <formula>if(RecordType.Name = &apos;Panel&apos;, Panel_Pitch__c * Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Panel Tilt Sum</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>System Design Item</label>
    <nameField>
        <label>System Design Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Design Items</pluralLabel>
    <recordTypes>
        <fullName>Electrical</fullName>
        <active>true</active>
        <label>Electrical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entitlement</fullName>
        <active>true</active>
        <label>Entitlement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inverter</fullName>
        <active>true</active>
        <label>Inverter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mounting</fullName>
        <active>true</active>
        <label>Mounting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Panel</fullName>
        <active>true</active>
        <label>Panel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Special_Part</fullName>
        <active>true</active>
        <label>Special Part</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trenching</fullName>
        <active>true</active>
        <description>A trenching System Design Item represents the presence or absence of Trenching for a System Design Array.</description>
        <label>Trenching</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Effective_TSFR_cannot_Exceed_100</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_TSRF__c   &gt; 1</errorConditionFormula>
        <errorDisplayField>TSRF_Adjustment__c</errorDisplayField>
        <errorMessage>Effective TSRF Cannot exceed 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Install_Location_Cannot_Be_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Id = &quot;012C0000000HjPW&quot; ,ISNULL( Install_Location__c))</errorConditionFormula>
        <errorDisplayField>Install_Location__c</errorDisplayField>
        <errorMessage>Install Location Must be set for each System Design Item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Property_Check</fullName>
        <active>true</active>
        <description>Install Location&apos;s Property must match System Design&apos;s Property.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Panel&apos;, Install_Location__r.Physical_Surface__r.Property__r.Id  &lt;&gt;  System_Design_Array__r.System_Design__r.Property__r.Id)</errorConditionFormula>
        <errorDisplayField>Install_Location__c</errorDisplayField>
        <errorMessage>Install Location must be on the Property specified by this System Design.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_is_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Profile.Name = &apos;System Administrator&apos;, false, PRIORVALUE(Locked__c) = true)</errorConditionFormula>
        <errorMessage>Record is part of a closed Contract, and is locked from further editing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSRF_Adj_IFF_Tilted</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    TSRF_Adjustment__c &lt;&gt; 0  ,
     Tilt__c = 0)</errorConditionFormula>
        <errorDisplayField>TSRF_Adjustment__c</errorDisplayField>
        <errorMessage>TSFR Adjustments can only be made on &quot;Tilted&quot; Design Items</errorMessage>
    </validationRules>
</CustomObject>